routes separtion has been done
